--- a/css/app.css
+++ b/css/app.css
@@ -20,15 +20,24 @@ body{
     padding: 100px;
 }
 .job{
- border: 1px solid red;
+ 
  display: flex;
  justify-content: space-between;
  background-color: white;
+ border-radius: 5px;
+ padding: 40px;
+ -webkit-box-shadow: 4px 9px 13px 1px rgba(189,185,189,0.30);
+-moz-box-shadow: 4px 9px 13px 1px rgba(189,185,189,0.30);
+box-shadow: 4px 9px 13px 1px rgba(189,185,189,0.30);
 }
 
 .job img{
 border-radius: 50%;
 padding: 1.5em;
+padding: 0.5em;
+    height: 110px;
+    width: 110px;
+    margin-right: 15px;
 } 
 
 
@@ -43,6 +52,7 @@ padding: 1.5em;
  align-items: center;
  font-size: 15px;
 }
+
 .ocupation{
  font-size: 22px;
  font-weight: 700;
@@ -52,6 +62,7 @@ padding: 1.5em;
     border-radius: 11px;
     padding: 5px;
     color: white;
+    font-size: 12px;
     
 }
 
@@ -60,6 +71,7 @@ padding: 1.5em;
     border-radius: 11px;
     padding: 5px;
     color: white;
+    font-size: 12px;
 }
 
 .require{
@@ -71,10 +83,15 @@ padding: 1.5em;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    color:  hsl(180, 28%, 43%);
+    font-size: 15px;
+    margin-right: 20px;
+    font-weight: bold;
 }
 
 
 .skills p{
     background-color:#F0FAFB;
+    border-radius: 5px;
+    padding: 4px;
 }
