--- a/css/app.css
+++ b/css/app.css
@@ -29,6 +29,7 @@ body{
  -webkit-box-shadow: 4px 9px 13px 1px rgba(189,185,189,0.30);
 -moz-box-shadow: 4px 9px 13px 1px rgba(189,185,189,0.30);
 box-shadow: 4px 9px 13px 1px rgba(189,185,189,0.30);
+margin-top: 40px;
 }
 
 .job img{
